Bone snapping to cursor in edit mode snaps to middle of the bone instead of the head (regression) #92514

Closed
opened 2021-10-27 00:08:34 +02:00 by Daniel Salazar · 15 comments
Member

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-25 23:16, hash: 32cc9ff037
Worked: 3.0.0 Alpha, branch: master, commit date: 2021-10-18 21:38, hash: d7b231baa8

Caused by 2bcf93bbbe

Short description of error
Snapping a selected bone in edit mode to the 3DF cursor should snap based on it's head. but it's currently snapping to it's center.
image.png

Expected Result
image.png

Current Result
image.png

Exact steps for others to reproduce the error
Add a bone in edit mode and snap it to the 3D cursor

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-25 23:16, hash: `32cc9ff037` Worked: 3.0.0 Alpha, branch: master, commit date: 2021-10-18 21:38, hash: `d7b231baa8` Caused by 2bcf93bbbe **Short description of error** Snapping a selected bone in edit mode to the 3DF cursor should snap based on it's head. but it's currently snapping to it's center. ![image.png](https://archive.blender.org/developer/F11530101/image.png) Expected Result ![image.png](https://archive.blender.org/developer/F11530128/image.png) Current Result ![image.png](https://archive.blender.org/developer/F11530133/image.png) **Exact steps for others to reproduce the error** Add a bone in edit mode and snap it to the 3D cursor
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Author
Member

I can't verify but I'm suspicious of this commit https://developer.blender.org/rB9001dd7f29a2f22534cf5549bc500422b1243c97

I can't verify but I'm suspicious of this commit https://developer.blender.org/rB9001dd7f29a2f22534cf5549bc500422b1243c97

Added subscriber: @jwvdronkelaar

Added subscriber: @jwvdronkelaar

This happens for me as well with a build I made yesterday.

This happens for me as well with a build I made yesterday.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'
Member

Worked: 3.0.0 Alpha, branch: master, commit date: 2021-10-18 21:38, hash: d7b231baa8

Cannot reproduce.
Posemode does this, but editmode? Even 2.79 behaved like current master (if the whole bone - head and tail - are selected it snaps to the middle).
Selecting head (or tail) alone will snap there correctly.
Can you verify?

> Worked: 3.0.0 Alpha, branch: master, commit date: 2021-10-18 21:38, hash: d7b231baa8 Cannot reproduce. Posemode does this, but editmode? Even 2.79 behaved like current master (if the whole bone - head and tail - are selected it snaps to the middle). Selecting head (or tail) alone will snap there correctly. Can you verify?
Author
Member

In #92514#1242158, @lichtwerk wrote:

Worked: 3.0.0 Alpha, branch: master, commit date: 2021-10-18 21:38, hash: d7b231baa8

Cannot reproduce.
Posemode does this, but editmode? Even 2.79 behaved like current master (if the whole bone - head and tail - are selected it snaps to the middle).
Selecting head (or tail) alone will snap there correctly.
Can you verify?

Download 2.93 and try. 2.79 is too old for regression testing. Also it worked correctly just a few days ago in Master

> In #92514#1242158, @lichtwerk wrote: >> Worked: 3.0.0 Alpha, branch: master, commit date: 2021-10-18 21:38, hash: d7b231baa8 > > Cannot reproduce. > Posemode does this, but editmode? Even 2.79 behaved like current master (if the whole bone - head and tail - are selected it snaps to the middle). > Selecting head (or tail) alone will snap there correctly. > Can you verify? Download 2.93 and try. 2.79 is too old for regression testing. Also it worked correctly just a few days ago in Master
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Ah, sorry, was reading it the other way around (Cursor to Selected vs Selection to Cursor)
Can confirm, will check

Ah, sorry, was reading it the other way around (`Cursor to Selected `vs `Selection to Cursor`) Can confirm, will check
Author
Member

In #92514#1242179, @lichtwerk wrote:
Ah, sorry, was reading it the other way around (Cursor to Selected vs Selection to Cursor)
Can confirm, will check

Ah! Thanks man

> In #92514#1242179, @lichtwerk wrote: > Ah, sorry, was reading it the other way around (`Cursor to Selected `vs `Selection to Cursor`) > Can confirm, will check Ah! Thanks man
Member

Caused by 2bcf93bbbe

Caused by 2bcf93bbbe
Campbell Barton self-assigned this 2021-10-27 13:07:00 +02:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Committed 16f468fb14, closing.

Committed 16f468fb14, closing.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92514
No description provided.