Fix T92514: Edit-mode bone snap to cursor uses the center of the bone

Regression in 2bcf93bbbeb9e32f680c37a1e0054ff16cb00ef0.